--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - /pgdata:/postgresql/data
+      - "./pg_data:/postgresql/data"
     environment:
       PGDATA: /postgresql/data
       POSTGRES_PASSWORD: postgres
